--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<style>
+    body{
+        background-color: black;
+        color: blue;
+    }
+</style>
 <body>
     <h1>Hello Git</h1>
     <h2>Hello World</h2>
