--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
         background-color: black;
         color: blue;
     }
+    h1 {
+        background-color: brown;
+        text-align: center;
+        padding: 10px;
+        width: 100px;
+    }
 </style>
 <body>
     <h1>Hello Git</h1>
