--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         color: blue;
     }
     h1 {
-        background-color: brown;
+        background-color: rgb(159, 165, 42);
         text-align: center;
         padding: 10px;
         width: 100px;
