--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <style>
     body{
-        background-color: black;
-        color: blue;
+        background-color: rgb(204, 162, 162);
+        color: rgb(136, 223, 29);
     }
     h1 {
         background-color: rgb(159, 165, 42);
